[gd_scene load_steps=4 format=3 uid="uid://c277l7vlf1p0h"]

[ext_resource type="Script" path="res://main.gd" id="1_c8qm8"]
[ext_resource type="Texture2D" uid="uid://blaeqlf1n3lxq" path="res://bg/title.png" id="2_0lti7"]
[ext_resource type="AudioStream" uid="uid://cbmtcjt1iapkl" path="res://sfx/START.wav" id="2_8xgoa"]

[node name="Main" type="Node"]
script = ExtResource("1_c8qm8")

[node name="MainMenu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0lti7")

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Round" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Round time: "
horizontal_alignment = 1

[node name="Lower" type="Button" parent="MainMenu/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "<"

[node name="Higher" type="Button" parent="MainMenu/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = ">"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Citizens" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Citizens: "
horizontal_alignment = 1

[node name="LowerC" type="Button" parent="MainMenu/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "<"

[node name="HigherC" type="Button" parent="MainMenu/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = ">"

[node name="Start" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="NotStart" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_vertical = 3
text = "Sry I just accidentally started this game, wasn't meant to play this, I'll quit. sry again"
autowrap_mode = 2

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Woffelson GGJ 2025"

[node name="StartSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_8xgoa")
volume_db = -5.0
autoplay = true

[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/HBoxContainer/Lower" to="." method="_on_lower_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/HBoxContainer/Higher" to="." method="_on_higher_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/HBoxContainer2/LowerC" to="." method="_on_lower_c_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/HBoxContainer2/HigherC" to="." method="_on_higher_c_pressed"]
